CSS sign-in.html.twig

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,13 +33,15 @@ security:
 
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
-  access_control:
-    - { path: ^/admin, roles: ROLE_ADMIN }
-    - { path: ^/user, roles: ROLE_USER }
-    - { path: ^/editor, roles: ROLE_EDITOR }
+  #access_control:
+  #- { path: ^/admin, roles: ROLE_ADMIN }
+  #- { path: ^/user, roles: ROLE_USER }
+  #- { path: ^/editor, roles: ROLE_EDITOR }
 
   role_hierarchy:
-    ROLE_BO: ROLE_USER
-    ROLE_ADMIN: [ROLE_BO, ROLE_EDITOR]
-    ROLE_USER: ROLE_USER
-    ROLE_EDITOR: ROLE_BO
+    ROLE_USER: []
+    ROLE_BO: [ROLE_USER]
+    ROLE_EDITOR: [ROLE_BO]
+    ROLE_ADMIN: [ROLE_EDITOR]
+  # Role par defaut : role user
+  # Ce role correspond à n'importe quel utilisateur
